--- a/Website/Blazor/Pages/Project/Issues/Issue.razor.css
+++ b/Website/Blazor/Pages/Project/Issues/Issue.razor.css
@@ -7,6 +7,7 @@
     margin-bottom: 30px;
     width: 100%; /* Чтобы не выходило за границы */
     box-sizing: border-box; /* Учитываем padding в ширине */
+    max-width: none;
 }
 
 .icon {
