--- a/Website/Blazor/Pages/Overview.razor
+++ b/Website/Blazor/Pages/Overview.razor
@@ -19,6 +19,7 @@
     <Markdown MarkdownString="@Config.Instance.OverviewMarkdown" />
 </Container>
 
+<Dev>
 <Container Title="Some tests (нажми на меня!)" BackgroundColor="#000" Hidden="true">
     <Container Title="Каждый" BackgroundColor="#f00" TitleColor="#000">
         <Container Title="охотник" BackgroundColor="#f60" TitleColor="#000">
@@ -65,3 +66,4 @@
         </Container>
     </Container>
 </Container>
+</Dev>
